# user_mgr

./: .gitignore  README.md  main.py  main_cli.py  pyproject.toml  user_mgr_v1.py  user_mgr_v2.py  v1command.md
src/: address_service.py  config.py  director_service.py  points_service.py  reward_service.py  user_service.py  wechat_service.py
src/app/: app.py  models.py  routes.py
src/routers/: user_router.py
src/tools/: init_db.py
tools/: init_db.py
